--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,14 @@
             "label": "build",
             "type": "shell",
             "command": "g++",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
             "args": [
                 "-g",
                 "${file}",
